Fix alignment of callout menu item sub-items

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -49,6 +49,12 @@
 		@media ( max-width: 900px ) {
 			display: none;
 		}
+
+		&:hover > ul,
+		&.focus > ul {
+			left: auto;
+			right: 0;
+		}
 	}
 
 	ul {
