--- a/style.css
+++ b/style.css
@@ -257,6 +257,10 @@ a.cta-button {
   @media (max-width: 900px) {
     .main-navigation .callout {
       display: none; } }
+  .main-navigation .callout:hover > ul,
+  .main-navigation .callout.focus > ul {
+    left: auto;
+    right: 0; }
 
 .main-navigation ul li {
   display: list-item;
